tests/e2e/function_call_no_inline_expression.error
Error: syntax error in story at line 1, column 2

1|    (random string length: 10) (key: 2)
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

E0050: Service output can not be called as a function
