tests/e2e/function_call_no_inline_expression.story
(random string length: 10) (key: 2)
